@@ -56,6 +56,7 @@ Other fixes:
  - Wii: Fix pixelated filtering on interframe blending (fixes mgba.io/i/1830)
 Misc:
  - GB: Allow pausing event loop while CPU is blocked
+ - GBA: Allow pausing event loop while CPU is blocked
  - Debugger: Keep track of global cycle count
  - FFmpeg: Add looping option for GIF/APNG
  - FFmpeg: Use range coder for FFV1 to reduce output size
